Dodata dozvola za kameru neuspesno

--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -25,6 +25,11 @@
         android:onClick="btnOpenCameraClicked"
         />
 
+    <WebView
+        android:id="@+id/pageInfo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 
 
 </LinearLayout>
